# glgame2d

./: .gitignore  CMakeLists.txt  README.md
assets/: fallback_texture.png~
assets/map/: awesomeface.tsj  container.tsj  doubleheight.tsj  map.tmj
example/: CMakeLists.txt
example/src/: main.cpp
include/: QuadVAO.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  Window.hpp
include/glad/: glad.h
include/glgame2d/: Camera.hpp  Clock.hpp  Entity.hpp  GLCall.hpp  Input.hpp  Keyboard.hpp  Mixer.hpp  Mouse.hpp  QuadVAO.hpp  Rect.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  Tilemap.hpp  Window.hpp
src/: Camera.cpp  Clock.cpp  Entity.cpp  Input.cpp  Keyboard.cpp  Mixer.cpp  Mouse.cpp  QuadVAO.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Tilemap.cpp  Window.cpp  glad.c  main.cpp
tests/: CMakeLists.txt  camera_tests.cpp  shader_tests.cpp  sprite_tests.cpp  tests.cpp  texture_tests.cpp
